--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Vikis projects portfolio",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot",
+    "build": "webpack -p"
   },
   "author": "Vikis Satkevicius",
   "license": "ISC",
