--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Vikis Satkevicius",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
     "md5-es": "^1.8.1",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
